--- a/Tidying.Rmd
+++ b/Tidying.Rmd
@@ -30,6 +30,24 @@ Overall$Name <-  gsub('â\200”','',Overall$Name)
 
 
 ```{r}
+kable(Overall)
+# Overall$Name <- factor(Overall$Name, levels = c("FA20 Search 1S20 Email 01", 
+#                                                 "FA20 Search 1S20 Email 02",
+#                                                 "FA20 Search 1S20 Email 03",
+#                                                 "FA20 Search 1S20 Email 04",
+#                                                 "FA20 Search 1S20 Email 05",
+#                                                 "FA20 Search 1S20 Email 06",
+#                                                 "FA20 Search 1S20 Email 07",
+#                                                 "FA20 Search 1J21 Email 01", 
+#                                                 "FA20 Search 1J21 Email 02", 
+#                                                 "FA20 Search 1J21 Email 03",
+#                                                 "FA20 Search 1J21 Email 04",
+#                                                 "FA20 Search 1J21 Email 05",
+#                                                 "FA20 Search 1J21 Email 06",
+#                                                 "FA20 Search 1J21 Email 07"))
+# 
+# Overall$Name <- as.character(Overall$Name)
+
 Overall <- Overall%>% 
   mutate(Date.Time.Sent = as.POSIXct(Date.Time.Sent, format = "%m/%d/%Y %I:%M %p")) %>% 
   separate(Date.Time.Sent, into = c("Date", "Time"), sep = " ") %>% 
@@ -41,11 +59,13 @@ Overall <- Overall%>%
          Unique.Click.Through.Rate = round(Unique.Click.Through.Rate, 2)) %>% 
   select(Job.ID, Campaign, Email, Date, Sent, Open.Rate, Deliverability.Rate, Unique.Click.Through.Rate)
 
+Overall
 kable(Overall %>% select(Campaign, Email, Open.Rate, Unique.Click.Through.Rate)) %>% 
   kable_styling()
 
+
 kable(Overall, caption = "Search Performance by Campaign and Email") %>%
   kable_paper("striped", full_width = F) %>%
-  pack_rows("Senior Search", 1, 7) %>%
+  pack_rows("Senior Search", 1, 8) %>%
   pack_rows("Junior Search", 8, 14)
 
